--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "antd": "^4.19.5",
     "axios": "^0.26.1",
     "babel-plugin-import": "^1.13.5",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^4.6.1",
     "css": "^3.0.0",
     "customize-cra": "^1.0.0",
